добавление данных на страницу профиля, использование SharedPreferences для хранения информации о текущем пользователе, добавление suspend функции в классе dbHelp для выполнения операций с базой данных. Все операции ввода-вывода перенесены в Dispatchers.IO для разгрузки основного потока ( CoroutineScope и launch для вызова коррутин из Activity).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MyProject</string>
+    <string name="textCard1">ТОРТИкииии</string>
+    <string name="textCard2">Торт</string>
 </resources>
